--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,14 @@ version: '3.8'
 services:
   db:
     container_name: db_container
-    image: postgres
+    image: postgres:alpine
     restart: always
     environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - db_volume:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       - retee
 
